--- a/index.html
+++ b/index.html
@@ -9,14 +9,84 @@
 </head>
 
 <body class="work-sans-font">
-  <header>
-    <nav class="navbar">
+  <header class="bg-light">
+    <nav class="navbar display-flex">
       <h3 class="brand">G3-Architects</h3>
+      <ul class="nav-links display-flex">
+        <!-- li.nav-item*4>a.nav-link -->
+        <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
+        <li class="nav-item"><a href="" class="nav-link">Login</a></li>
+      </ul>
     </nav>
+    <div class="banner">
+      <div class="banner-content">
+        <h1 class="banner-title">Brand New Group of Architects</h1>
+        <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority
+          have suffered alteration in some form,
+          by injected humour, or randomised words which don't look even</p>
+        <button class="btn-primary">Explore More</button>
+      </div>
+      <img class="banner-image" src="images/banner.png" alt="">
+    </div>
 
   </header>
   <main>
+    <!-- teams section start -->
+    <section class="teams display-flex">
+      <div class="team-img-container">
+        <img src="images/team1.png" alt="two architects">
+        <img src="images/team2.png" alt="">
+        <img src="images/team3.png" alt="">
+        <img src="images/team4.png" alt="">
+      </div>
+      <div class="our-features">
+        <h3 class="section-title">
+          <span id="quick-list" class="dark-light-grey">Quick list</span> <span>of Our</span>
+          <span class="text-primary">Features</span>
+        </h3>
+        <p class="feature-description dark-light-grey">There are many variations of passages of Lorem Ipsum available,
+          but the majority
+          have suffered alteration in some form,
+          by injected humour, or randomised words which don't look even</p>
+        <button class="btn-primary">Explore More</button>
+      </div>
+    </section>
+    <!-- features will enjoy -->
+    <section>
 
+
+    </section>
+    <!-- some facts -->
+    <section class="some-facts">
+      <h3 class="section-title">Some Facts</h3>
+      <p class="dark-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have
+        suffered alteration.</p>
+      <div class="facts-container">
+        <!-- .fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+        <div class="fact">
+          <img src="images/icons/ribon.png" alt="ribon" class="fact-icon">
+          <h4 class="fact-number">54</h4>
+          <h5 class="fact-name">Awards Winnings</h5>
+        </div>
+        <div class="fact">
+          <img src="images/icons/projects.png" alt="projects" class="fact-icon">
+          <h4 class="fact-number">1458</h4>
+          <h5 class="fact-name">Project Finished</h5>
+        </div>
+        <div class="fact">
+          <img src="images/icons/customers.png" alt="customer" class="fact-icon">
+          <h4 class="fact-number">590</h4>
+          <h5 class="fact-name">Clients Worked</h5>
+        </div>
+        <div class="fact">
+          <img src="images/icons/email.png" alt="email" class="fact-icon">
+          <h4 class="fact-number">22578</h4>
+          <h5 class="fact-name">Email Send</h5>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
