--- a/index.html
+++ b/index.html
@@ -61,29 +61,38 @@
     <!-- some facts -->
     <section class="some-facts">
       <h3 class="section-title">Some Facts</h3>
-      <p class="dark-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have
+      <p class="dark-light-grey facts-description">There are many variations of passages of Lorem Ipsum available, but
+        the majority have
         suffered alteration.</p>
       <div class="facts-container">
         <!-- .fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
-        <div class="fact">
-          <img src="images/icons/ribon.png" alt="ribon" class="fact-icon">
-          <h4 class="fact-number">54</h4>
-          <h5 class="fact-name">Awards Winnings</h5>
+        <div class="fact-card display-flex">
+          <div>
+            <img src="images/icons/ribon.png" alt="ribon" class="fact-icon">
+            <h4 class="fact-number">54</h4>
+            <h5 class="fact-name">Awards Winnings</h5>
+          </div>
         </div>
-        <div class="fact">
-          <img src="images/icons/projects.png" alt="projects" class="fact-icon">
-          <h4 class="fact-number">1458</h4>
-          <h5 class="fact-name">Project Finished</h5>
+        <div class="fact-card">
+          <div>
+            <img src="images/icons/projects.png" alt="projects" class="fact-icon">
+            <h4 class="fact-number">1458</h4>
+            <h5 class="fact-name">Project Finished</h5>
+          </div>
         </div>
-        <div class="fact">
-          <img src="images/icons/customers.png" alt="customer" class="fact-icon">
-          <h4 class="fact-number">590</h4>
-          <h5 class="fact-name">Clients Worked</h5>
+        <div class="fact-card">
+          <div>
+            <img src="images/icons/customers.png" alt="customer" class="fact-icon">
+            <h4 class="fact-number">590</h4>
+            <h5 class="fact-name">Clients Worked</h5>
+          </div>
         </div>
-        <div class="fact">
-          <img src="images/icons/email.png" alt="email" class="fact-icon">
-          <h4 class="fact-number">22578</h4>
-          <h5 class="fact-name">Email Send</h5>
+        <div class="fact-card">
+          <div>
+            <img src="images/icons/email.png" alt="email" class="fact-icon">
+            <h4 class="fact-number">22578</h4>
+            <h5 class="fact-name">Email Send</h5>
+          </div>
         </div>
       </div>
     </section>
