--- a/index.html
+++ b/index.html
@@ -54,19 +54,56 @@
       </div>
     </section>
     <!-- features will enjoy -->
-    <section>
+    <section class="features display-flex">
+      <div>
+        <h3 id="features-section-title" class="section-title">Features you will <br>love & enjoy</h3>
+        <p class="dark-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have
+          suffered alteration in some form,
+          by injected humour, or randomised words which don't look even</p>
 
-
-    </section>
-    <!-- some facts -->
+        <!-- feature card container -->
+        <div class="feature-card">
+          <h4 class="feature-title">Dexktop & Mobile Version</h4>
+          <p class="dark-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority
+            have suffered alteration in some form,
+            by injected humour, or randomised...........</p>
+        </div>
+        <div class="feature-card">
+          <h4 class="feature-title">Dexktop & Mobile Version</h4>
+          <p class="dark-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority
+            have suffered alteration in some form,
+            by injected humour, or randomised...........</p>
+        </div>
+        <div class="feature-card">
+          <h4 class="feature-title">Dexktop & Mobile Version</h4>
+          <p class="dark-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority
+            have suffered alteration in some form,
+            by injected humour, or randomised...........</p>
+        </div>
+        <div class="feature-card">
+          <h4 class="feature-title">Dexktop & Mobile Version</h4>
+          <p class="dark-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority
+            have suffered alteration in some form,
+            by injected humour, or randomised...........</p>
+        </div>
+      </div>
+      <div>
+        <img src="images/architect.png" alt="">
+        <button id="experiance-badge" class="btn-primary">
+          <span class="experiance-year">10+Years</span>
+          <br>
+          <span>Experience</span>
+        </button>
+      </div>
+    </section> <!-- some facts -->
     <section class="some-facts">
       <h3 class="section-title">Some Facts</h3>
       <p class="dark-light-grey facts-description">There are many variations of passages of Lorem Ipsum available, but
         the majority have
         suffered alteration.</p>
-      <div class="facts-container">
+      <div class="facts-container  grid">
         <!-- .fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
-        <div class="fact-card display-flex">
+        <div class="fact-card">
           <div>
             <img src="images/icons/ribon.png" alt="ribon" class="fact-icon">
             <h4 class="fact-number">54</h4>
@@ -94,6 +131,24 @@
             <h5 class="fact-name">Email Send</h5>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- our sponsors -->
+    <section class="our-sponsors">
+      <div class="sponsors-info">
+        <h3 class="section-title">Our Sponspors</h3>
+        <p class="dark-light-grey">There are many variations of passages of Lorem Ipsum available,
+          but the majority have
+          suffered alteration.</p>
+      </div>
+      <div class="sponsor-companies">
+        <img src="images/sponsors/spotify.png" alt="">
+        <img src="images/sponsors/amazon.png" alt="">
+        <img src="images/sponsors/google.png" alt="">
+        <img src="images/sponsors/telerama.png" alt="">
+        <img src="images/sponsors/figma.png" alt="">
+
       </div>
     </section>
   </main>
