--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div>
         <img src="images/architect.png" alt="">
         <button id="experiance-badge" class="btn-primary">
-          <span class="experiance-year">10+Years</span>
+          <span id="experiance-year">10+Years</span>
           <br>
           <span>Experience</span>
         </button>
